--- a/index.html
+++ b/index.html
@@ -5,13 +5,22 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>Thông Tin</header>
     <section class ="qb">
+      <header>Thông Tin</header>
       <form action="abi.html">
+        <div class="f-input">
+          <label>Họ và Tên :</label>
+          <input type="text">
+        </div>
+        <div class="f-input">
+          <label>Họ và Tên :</label>
+          <input type="text">
+        </div>
+
         <div class ="filed">
           <button>Gửi</button>
-        </div> 
+        </div>
       </form> 
-    </section> 
+    </section>
 </body>
 </html>  
