--- a/aii.html
+++ b/aii.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="yle.css">
+    <link rel="stylesheet" href="css/yle.css">
   </head>
   <body>
     <div class="loader"></div>
