--- a/index.html
+++ b/index.html
@@ -1,25 +1,48 @@
+
 <!DOCTYPE html>
-<html>
-<head>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>abi</title>
     <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
+  </head>
+  <body>
     <section class ="qb">
       <header>Thông Tin</header>
-      <form action="abi.html">
+      <form action="css/abi.html">
         <div class="f-input">
-          <label>Họ và Tên :</label>
-          <input type="text">
+          <label for = "name">Họ và Tên :</label>
+          <input type="text" id ="name">
         </div>
         <div class="f-input">
-          <label>Họ và Tên :</label>
-          <input type="text">
+          <label for = "name">Năm Sinh :</label>
+          <input type="text" id ="name">
         </div>
+        <div class="f-input">
+          <label for = "name">Địa Chỉ :</label>
+          <input type="text" id ="name">
+        </div>
+        <div class="f-input">
+          <label for = "name">Số Điện Thoại :</label>
+          <input type="text" id ="name">
+        </div>
+        <div class="f-input">
+          <label for = "name">Email :</label>
+          <input type="email" id ="name">
+        </div>
+
         <div class ="filed">
-          <button>Gửi</button>
+          <button onclick="ok()">Gửi</button>
         </div>
       </form> 
     </section>
-</body>
+<script>
+  function ok(){
+    alert("ok");
+    window.open('https://gmail.com');//google.com');
+  }
+</script>
+  </body>
 </html>  
